GIA-81 Migrate DAO to Hibernate
* GIA-78 remove public for mapper test

* GIA-81 Migrate DAO to Hibernate

* GIA-81 changed pom

* GIA-81 create dao tests for trainee

* GIA-81 fix pom

* GIA-81 fix import

* GIA-81 Migrate DAO to Hibernate

* GIA-81 fix tests

* GIA-81 add constant for facade

* GIA-81 fix test